# pandasdv

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
Sample_project/: .~lock.Consumer_Brand_Preference_Questionnaire.docx#  Consumer_Brand_Preference_Data_50.csv  Consumer_Brand_Preference_Data_50.sav  Consumer_Brand_Preference_Questionnaire.docx  DV_clean.py  Python_output.txt
pandasdv/: core.py
tests/: test_core.py
